fix(golive): Alignment issue
[finishes #82038624]

--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -345,7 +345,7 @@ input[type="search"], input[type="text"], input[type="password"], input[type="em
 			float: right;
 		}
 	}
-	form { margin: { top: 8px; bottom: 6px;}}
+	form { margin: { top: 0px; bottom: 6px;}}
 	.alert {
 		text-align: center;
 		text-shadow: none;
